# dakota-technicalassessment

./: .env.example  Makefile  README.md  docker-compose.yml  run.bat  run.sh
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/models/: carbon.py  market.py  weather.py
api/app/routers/: carbon.py  market.py  weather.py
database/init/: 00_create_databases.sql  01_schemas.sql  02_raw_tables.sql  03_indexes.sql
dbt/energy_analytics/: dbt_project.yml  profiles.yml
dbt/energy_analytics/macros/: utils.sql
dbt/energy_analytics/models/: groups.yml  sources.yml
dbt/energy_analytics/models/bronze/: bronze_carbon_intensity.sql  bronze_eia_generation.sql  bronze_eia_prices.sql  bronze_market_prices.sql  bronze_weather.sql  schema.yml
dbt/energy_analytics/models/gold/: gold_carbon_footprint.sql  gold_executive_summary.sql  gold_generation_by_fuel_monthly.sql  gold_price_trends.sql  schema.yml
dbt/energy_analytics/models/silver/: schema.yml  silver_carbon_reference.sql  silver_generation_cleaned.sql  silver_market_aggregated.sql  silver_prices_cleaned.sql  silver_weather_aggregated.sql
docs/: architecture.md  decisions.md
ingestion/: config.py  pyproject.toml
ingestion/clients/: base_client.py  eia_client.py  enrichment_client.py
ingestion/loaders/: base_loader.py  eia_loader.py  enrichment_loader.py
orchestration/: Dockerfile  dagster.yaml  definitions.py  pyproject.toml  workspace.yaml
orchestration/assets/: dbt_assets.py  ingestion_assets.py  report_assets.py
orchestration/jobs/: pipeline_jobs.py
orchestration/resources/: database.py
orchestration/schedules/: schedules.py
orchestration/sensors/: enrichment_sensor.py
reports/generators/: db_connector.py  excel_report.py  jupyter_report.py
reports/output/: energy_analytics_report.html
tests/: conftest.py  pyproject.toml
tests/integration/: test_database.py  test_ingestion_pipeline.py
tests/unit/: test_api_carbon.py  test_api_market.py  test_api_weather.py  test_eia_client.py  test_enrichment_client.py
