[project]
name = "dakota-orchestration"
version = "1.0.0"
description = "Dagster orchestration for the Dakota energy analytics pipeline"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.7.0",
    "dagster-postgres>=0.23.0",
    "dagster-dbt>=0.23.0",
    "dagster-webserver>=1.7.0",
    "dbt-core>=1.8.0",
    "dbt-postgres>=1.8.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
    "nbformat>=5.10.0",
    "nbconvert>=7.16.0",
    "ipykernel>=6.29.0",
    "fastapi>=0.111.0",
    "respx>=0.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "orchestration.definitions"
